--- a/src/css/_custom.scss
+++ b/src/css/_custom.scss
@@ -44,6 +44,53 @@
     src: local('Myriad Pro_Light'), url(./font/Myriad_Pro_Light.otf) format('truetype');
 }
 
+@font-face {
+    font-family: '';
+    src: local('Myriad Pro_Light'), url(./font/Myriad_Pro_Light.otf) format('truetype');
+}
+
+
+
+
+@font-face {
+    font-family: 'Red Hat Display Black';
+    src: local('Red Hat Display Black'), url(./font/RedHatDisplay-Black.ttf) format('truetype');
+}
+
+@font-face {
+    font-family: 'Red Hat Display Black Italic';
+    src: local('Red Hat Display Black Italic'), url(./font/RedHatDisplay-BlackItalic.ttf) format('truetype');
+}
+
+@font-face {
+    font-family: 'Red Hat Display Bold';
+    src: local('Red Hat Display Bold'), url(./font/RedHatDisplay-Bold.ttf) format('truetype');
+}
+
+@font-face {
+    font-family: 'Red Hat Display Bold Italic';
+    src: local('Red Hat Display Bold Italic'), url(./font/RedHatDisplay-BoldItalic.ttf) format('truetype');
+}
+
+@font-face {
+    font-family: 'Red Hat Display Italic';
+    src: local('Red Hat Display Italic'), url(./font/RedHatDisplay-Italic.ttf) format('truetype');
+}
+@font-face {
+    font-family: 'Red Hat Display Medium';
+    src: local('Red Hat Display Medium'), url(./font/RedHatDisplay-Medium.ttf) format('truetype');
+}
+@font-face {
+    font-family: 'Red Hat Display Medium Italic';
+    src: local('Red Hat Display Medium Italic'), url(./font/RedHatDisplay-MediumItalic.ttf) format('truetype');
+}
+
+@font-face {
+    font-family: 'Red Hat Display Regular';
+    src: local('Red Hat Display Regular'), url(./font/RedHatDisplay-Regular.ttf) format('truetype');
+}
+
+
 
 /*media hasta movil 576px */
 
@@ -885,7 +932,7 @@ textarea {
         border-radius: .5rem;
         width: 20rem;
         min-width: 17rem;
-        height: 23rem;
+        height: 21rem;
     }
     .cardsocio {
         min-width: 17rem;
@@ -1050,7 +1097,7 @@ textarea {
         border-radius: .5rem;
         width: 25rem !important;
         min-width: 17rem !important;
-        height: 28rem !important;
+        height: 25rem !important;
     }
     .cardsocio {
         min-width: 17rem;
@@ -1184,12 +1231,22 @@ textarea {
     }
     // Seccion listo para la transformacion digital home 
     .imagentransformacion {
-        width: 300px !important;
+        width: 200px !important;
+        max-width: 200px !important;
         min-width: 150px !important;
     }
     .telefono {
         width: 18px !important;
         height: 18px !important;
+    }
+}
+
+
+@media screen and (min-width: 1500px) {
+    .imagentransformacion {
+        width: 300px !important;
+        max-width: 300px !important;
+        min-width: 150px !important;
     }
 }
 
@@ -1376,3 +1433,145 @@ textarea {
         align-items: center;
     }
 }
+
+.eventosPasadosS1{
+    background-color: #F4F7FB !important ; 
+    height: auto; 
+    padding: 55px 40px 30px;
+    
+}
+
+.eventosPasadosS2{
+    padding: 50px 40px; 
+    height: auto;
+    background-color: #FFF !important;
+}
+.eventosPasadosS2 > div{
+    display: flex; 
+    flex-direction:row;
+
+}
+.eventosPasadosS3 {
+    background-color: #F4F7FB !important; 
+    height: 35vh; 
+    padding: 50px 40px;
+    align-items:center;
+    display:flex ;  
+    flex-direction: column;
+
+}
+
+.textoRojoEventoPasados{
+    color: #B80000; 
+    padding-top: 2px;
+    margin-left: 5px;
+}
+.infoDireccion{
+    flex-direction: row; 
+    display: flex;
+    
+}
+
+.descripcionEvento{
+    flex-direction: column; 
+    display: flex;
+    
+}
+
+.carruselEventoPasado{
+    width: 300px;
+}
+
+@media screen and (min-width: 750px){
+    .eventosPasadosS1 {
+        background-color: #F4F7FB !important;
+        height: 30vh !important;
+        padding: 30px 40px;
+        
+    }
+    
+    
+    
+    .eventosPasadosS2 {
+        padding: 50px 40px;
+        height: 30vh !important;
+        background-color: #FFF !important;
+    }
+    
+    
+    .eventosPasadosS3 {
+        background-color: #F4F7FB !important;
+        height: 25vh;
+        padding: 50px 40px;
+        align-items: center;
+        display: flex;
+        flex-direction: column;
+    }
+
+}
+
+
+@media screen and (min-width: 900px){
+.descripcionEvento{
+    flex-direction: row; 
+    display: flex;
+   
+}
+.eventosPasadosS2{
+    padding: 50px 40px; 
+    height: auto !important;
+    background-color: #FFF !important; 
+}
+
+.carruselEventoPasado{
+    width: 650px;
+}
+
+.eventosPasadosS1 {
+    background-color: #F4F7FB !important;
+    height: 45vh !important;
+    padding: 30px 40px;
+    // margin-top: -50px;
+}
+
+.eventosPasadosS3 {
+    background-color: #F4F7FB !important;
+    height: 35vh;
+    padding: 50px 40px;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+}
+
+
+
+}
+
+@media screen and (min-width: 1500px){
+.eventosPasadosS2{
+    padding: 50px 70px; 
+    height: auto !important;
+    background-color: #FFF !important;
+}
+
+.eventosPasadosS1{
+    background-color: #F4F7FB !important; 
+    height: 30vh !important ; 
+    padding: 30px 70px;
+}
+.eventosPasadosS3 {
+    background-color: #F4F7FB !important; 
+    height: 25vh; 
+    padding: 50px 70px;
+    align-items:center;
+    display:flex ;  
+    flex-direction: column;
+
+}
+.carruselEventoPasado{
+    width: 850px;
+}
+
+}
+
+ 
